--- a/src/scss/components/_main.scss
+++ b/src/scss/components/_main.scss
@@ -1,4 +1,3 @@
-
 /* Section: Welcome Tab */
 
 .welcome-section {
@@ -74,6 +73,46 @@
   width: 100%;
 }
 
+.auction-img {
+  cursor: pointer;
+}
+
+/* Single Listing */
+
+#listing-section {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 5%;
+}
+
+#seller-list-container {
+  display: flex;
+  flex-direction: column;
+}
+
+#seller-container {
+  width: 100%;
+  margin-top: 5%;
+}
+
+#seller-image {
+  width: 50%;
+}
+
+#listing-card {
+  width: 100%;
+}
+
+#image-container {
+  width: 30%;
+}
+
+#listing-img {
+  width: 100%;
+}
+
 /* Section: Profile */
 
 #profile-section {
@@ -85,3 +124,12 @@
 #create-section {
   display: none;
 } 
+
+#create-container {
+  width: 50%;
+  margin: 2% auto;
+}
+
+.form-control {
+  margin-bottom: 5%;
+}
